--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <!-- KMRG -->
     <h1>Primera Pagina</h1>
+    <p>Hola, ¿Cómo están?</p>
+    <p>Esto lo hice yo Karla M</p>
+    <p>Checo Perez es el mejor</p>
 </body>
 </html>
